--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,6 @@
         "monolog/monolog": ">1.4.0"
     },
     "autoload": {
-        "psr-4": {"MySQLHandler\\": "src/MySQLHandler"}
+        "psr-4": {"MySQLHandler\\": "src/MySQLHandler/Handler"}
     }
 }
