--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,9 @@
     },
     "autoload": {
         "psr-4": {"MySQLHandler\\": "src/MySQLHandler"}
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^6.1",
+        "phpunit/dbunit": "^3.0"
     }
 }
