--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         "psr-4": {"MySQLHandler\\": "src/MySQLHandler"}
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.1",
-        "phpunit/dbunit": "^3.0"
+        "phpunit/phpunit": "~4.4",
+        "phpunit/dbunit": "~2.0"
     }
 }
