--- a/composer.json
+++ b/composer.json
@@ -1,21 +1,30 @@
 {
-    "name": "wazaari/monolog-mysql",
-    "description": "A handler for Monolog that sends messages to MySQL",
-    "keywords": ["log", "logging", "monolog", "mysql", "database"],
-    "homepage": "https://github.com/waza-ari/monolog-mysql",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Daniel Herrmann",
-            "email": "daniel.herrmann1@gmail.com"
-        }
-    ],
-    "require": {
-        "ext-pdo": "*",
-        "monolog/monolog": ">1.4.0",
-        "ext-pdo_mysql": "*"
-    },
-    "autoload": {
-        "psr-4": {"MySQLHandler\\": "src/MySQLHandler"}
+  "name": "wazaari/monolog-mysql",
+  "description": "A handler for Monolog that sends messages to MySQL",
+  "keywords": [
+    "log",
+    "logging",
+    "monolog",
+    "mysql",
+    "database"
+  ],
+  "homepage": "https://github.com/waza-ari/monolog-mysql",
+  "license": "MIT",
+  "authors": [
+    {
+      "name": "Daniel Herrmann",
+      "email": "daniel.herrmann1@gmail.com"
     }
+  ],
+  "require": {
+    "php": "^7.2",
+    "ext-pdo": "*",
+    "ext-pdo_mysql": "*",
+    "monolog/monolog": "^2.0"
+  },
+  "autoload": {
+    "psr-4": {
+      "MySQLHandler\\": "src/MySQLHandler"
+    }
+  }
 }
