--- a/composer.json
+++ b/composer.json
@@ -22,9 +22,20 @@
     "ext-pdo_mysql": "*",
     "monolog/monolog": "^2.0"
   },
+  "require-dev": {
+    "phpunit/phpunit": "^8.5",
+    "doctrine/dbal": "^2.10",
+    "psy/psysh": "^0.10.4",
+    "fzaninotto/faker": "^1.9"
+  },
   "autoload": {
     "psr-4": {
-      "MySQLHandler\\": "src/MySQLHandler"
+      "MySQLHandler\\": "src"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests"
     }
   }
 }
