--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,16 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": "^8.0",
     "ext-pdo": "*",
     "ext-pdo_mysql": "*",
-    "monolog/monolog": "^2.0"
+    "monolog/monolog": "^2.8"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5",
-    "doctrine/dbal": "^2.10",
-    "psy/psysh": "^0.10.4",
-    "fzaninotto/faker": "^1.9"
+    "phpunit/phpunit": "^9.5",
+    "doctrine/dbal": "^3.5",
+    "psy/psysh": "^0.11.10",
+    "fakerphp/faker": "^1.21"
   },
   "autoload": {
     "psr-4": {
