--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "php": "^8.1",
     "ext-pdo": "*",
     "ext-pdo_mysql": "*",
-    "monolog/monolog": "^3.0"
+    "monolog/monolog": "^2.0 || ^3.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
