add tests coverage and phpunit cache to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-# Created by .gitignore support plugin (hsz.mobi)
 .idea
 vendor
 atlassian-ide-plugin.xml
 composer.lock
+
+tests/coverage/
+.phpunit.cache/
