restructure docker for testing environment

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,10 @@
     {
       "name": "Daniel Herrmann",
       "email": "daniel.herrmann1@gmail.com"
+    },
+    {
+      "name": "Clemens Bastian",
+      "email": "info@clemensbastian.de"
     }
   ],
   "require": {
